@startuml 클래스_다이어그램
!theme plain
skinparam classAttributeIconSize 0

' 엔티티 클래스 정의
package "Entity Layer" {
    class Member {
        -String name
        -String id
        -String nickname
        -String pwd
        -String gender
        -String email1
        -String email2
        -String tel1
        -String tel2
        -String tel3
        -String addr
        -Date logtime
        -String isSuspended
        -Date suspendStartDate
        -Date suspendEndDate
        -String suspendReason
    }

    class Imageboard {
        -int seq
        -String imageid
        -String imagename
        -int imageprice
        -Integer maxBidPrice
        -int imageqty
        -String imagecontent
        -String image1
        -String category
        -String auctionPeriod
        -String transactionMethod
        -Date auctionStartDate
        -Date auctionEndDate
        -String status
        -Date logtime
    }

    class Bid {
        -int bidSeq
        -int imageboardSeq
        -String bidderId
        -int bidAmount
        -Date bidTime
        -String status
    }

    class Board {
        -Long boardSeq
        -String boardName
        -String boardDescription
        -String boardType
        -String boardCategory
        -String isActive
        -Integer displayOrder
        -Integer noticeDisplayCount
        -Date createdDate
        -Date updatedDate
    }

    class BoardPost {
        -Long postSeq
        -Long boardSeq
        -String memberId
        -String postTitle
        -String postContent
        -String isNotice
        -Integer noticeOrder
        -Integer viewCount
        -Integer likeCount
        -String isHidden
        -String isDeleted
        -Date createdDate
        -Date updatedDate
    }

    class EventProduct {
        -Long productSeq
        -Long boardSeq
        -String productName
        -String productDescription
        -Long originalPrice
        -Long salePrice
        -Integer stockQuantity
        -Integer soldQuantity
        -Date endDate
        -String eventStatus
        -String deliveryInfo
        -String isDeleted
        -Date createdDate
        -Date updatedDate
    }

    class Manager {
        -String managerId
        -String managerName
        -String managerPwd
        -String managerEmail
        -String managerTel
        -String managerRole
        -Date logtime
        -Date lastLogin
    }
}

' DTO 클래스 정의
package "DTO Layer" {
    class ImageboardDTO {
        -int seq
        -String imageid
        -String imagename
        -int imageprice
        -String imagecontent
        -String image1
        -String category
        -String auctionPeriod
        -String transactionMethod
        -Date auctionStartDate
        -Date auctionEndDate
        -String status
        -Date logtime
    }

    class MemberDTO {
        -String name
        -String id
        -String nickname
        -String pwd
        -String gender
        -String email1
        -String email2
        -String tel1
        -String tel2
        -String tel3
        -String addr
        -Date logtime
    }

    class BidDTO {
        -int bidSeq
        -int imageboardSeq
        -String bidderId
        -int bidAmount
        -Date bidTime
        -String status
    }
}

' 서비스 클래스 정의
package "Service Layer" {
    class ImageboardService {
        +imageboardWrite()
        +imageboardList()
        +imageboardView()
        +imageboardModify()
        +imageboardDelete()
    }

    class MemberService {
        +login()
        +memberWrite()
        +memberModify()
        +memberView()
        +suspendMember()
        +unsuspendMember()
    }

    class BidService {
        +bidWrite()
        +bidList()
        +bidCancel()
        +getMaxBidAmount()
    }

    class BoardService {
        +boardCreate()
        +boardList()
        +boardModify()
        +boardDelete()
    }

    class EventProductService {
        +productCreate()
        +productList()
        +productView()
        +productModify()
        +productDelete()
    }
}

' 컨트롤러 클래스 정의
package "Controller Layer" {
    class ImageboardController {
        +imageboardWrite()
        +imageboardList()
        +imageboardView()
        +imageboardModify()
        +imageboardDelete()
    }

    class MemberController {
        +login()
        +memberWrite()
        +memberModify()
        +memberView()
    }

    class BidController {
        +bidWrite()
        +bidList()
        +bidCancel()
    }

    class BoardController {
        +boardCreate()
        +boardList()
        +boardModify()
        +boardDelete()
    }

    class ManagerController {
        +login()
        +memberList()
        +memberModify()
        +memberSuspend()
    }
}

' 관계 정의
Member "1" --> "*" Imageboard : 작성
Member "1" --> "*" Bid : 입찰
Imageboard "1" --> "*" Bid : 입찰내역
Board "1" --> "*" BoardPost : 게시글
Board "1" --> "*" EventProduct : 상품
Member "1" --> "*" BoardPost : 작성

ImageboardService --> Imageboard : 사용
MemberService --> Member : 사용
BidService --> Bid : 사용
BidService --> Imageboard : 참조
BoardService --> Board : 사용
EventProductService --> EventProduct : 사용

ImageboardController --> ImageboardService : 호출
MemberController --> MemberService : 호출
BidController --> BidService : 호출
BoardController --> BoardService : 호출
ManagerController --> MemberService : 호출

ImageboardService ..> ImageboardDTO : 변환
MemberService ..> MemberDTO : 변환
BidService ..> BidDTO : 변환

@enduml

